modules/aws/wazo.tf
provider "aws" {
  region = var.region
}

locals {
  private_ips_file = "/tmp/${substr(uuid(), 0, 8)}"
  instance_name    = var.names_prefix == "" ? "wazo-stack" : "${var.names_prefix}-wazo-stack"
  keypair_name     = var.names_prefix == "" ? "wazo-terraform" : "${var.names_prefix}-wazo-terraform"
  sg_name          = var.names_prefix == "" ? "wazo" : "${var.names_prefix}-wazo"
  use_bastion      = var.bastion_host != null && var.bastion_host != ""
  bastion_key_path = var.bastion_private_key_path == null || var.bastion_private_key_path == "" ? null : var.bastion_private_key_path
  allowed_ingress_public = concat(
    var.public_stacks ? ["0.0.0.0/0"] : [],
    var.additional_allowed_cidr_ranges,
  )
  allowed_ingress_private = var.additional_allowed_cidr_ranges
  sip_ports = [
    {
      port     = 5060
      protocol = "tcp"
    },
    {
      port     = 5060
      protocol = "udp"
    },
    {
      port     = 8067
      protocol = "tcp"
    },
    {
      port     = 9498
      protocol = "tcp"
    },
  ]
  webrtc_ports = [
    {
      port     = 3478
      protocol = "udp"
    },
    {
      port     = 19302
      protocol = "udp"
    },
    {
      port     = 5349
      protocol = "udp"
    },
    {
      port     = 443
      protocol = "udp"
    },
  ]
  stack_ports = [
    {
      port     = 80
      protocol = "tcp"
    },
    {
      port     = 443
      protocol = "tcp"
    },
    {
      port     = 123
      protocol = "udp"
    },
    {
      port     = 8667
      protocol = "tcp"
    },
    {
      port     = 8642
      protocol = "tcp"
    },
    {
      port     = 9486
      protocol = "tcp"
    },
    {
      port     = 9497
      protocol = "tcp"
    },
  ]
  private_stack_ports = [
    {
      port     = 5038
      protocol = "tcp"
    },
    {
      port     = 5039
      protocol = "tcp"
    },
  ]
}

resource "aws_key_pair" "wazo" {
  key_name   = local.keypair_name
  public_key = file(var.public_key_path)
}

data "aws_ami" "wazo" {
  most_recent = true
  owners      = ["self", "amazon"]

  filter {
    name   = "name"
    values = [var.amazon_ami_name_filter]
  }

  filter {
    name   = "architecture"
    values = [var.amazon_ami_architecture]
  }
}

data "aws_subnet" "this" {
  id = var.subnet_id
}

data "cloudinit_config" "wazo" {
  count = var.nb_instances
  dynamic "part" {
    for_each = concat(
      ["${path.module}/files/cloud-init.yml"],
      var.cloud_config_files,
      var.enable_root_password ? ["${path.module}/files/cloud-init-root-password.yml"] : []
    )
    iterator = filename
    content {
      content_type = "text/cloud-config"
      content = templatefile(filename.value, {
        hostname      = "${local.instance_name}-${count.index}",
        root_password = var.root_password,
      })
      merge_type = "list(append)+dict(recurse_list)+str()"
    }
  }
}

resource "aws_instance" "wazo" {
  ami           = data.aws_ami.wazo.id
  instance_type = var.instance_type
  subnet_id     = var.subnet_id
  key_name      = aws_key_pair.wazo.key_name
  count         = var.nb_instances
  tags = merge(var.instance_tags, {
    Name = "${local.instance_name}-${count.index}"
  })
  vpc_security_group_ids = length(var.security_group_ids) > 0 ? var.security_group_ids : [aws_security_group.wazo[0].id]
  user_data_base64       = data.cloudinit_config.wazo[count.index].rendered
  root_block_device {
    volume_size = var.root_volume_size
  }
  connection {
    host        = local.use_bastion ? self.private_ip : (var.public_stacks ? self.public_ip : self.private_ip)
    user        = "root"
    type        = "ssh"
    private_key = file(var.private_key_path)

    bastion_host        = local.use_bastion ? var.bastion_host : null
    bastion_user        = var.bastion_user
    bastion_port        = var.bastion_port
    bastion_host_key    = var.bastion_host_key
    bastion_private_key = local.use_bastion && local.bastion_key_path != null ? file(local.bastion_key_path) : null
  }

  provisioner "local-exec" {
    command = "echo ${count.index}:${self.private_ip} >> ${local.private_ips_file}"
  }

  provisioner "file" {
    source      = local.private_ips_file
    destination = "/tmp/private_ips.txt"
  }

  provisioner "file" {
    source      = "${path.module}/bin/wazo-bootstrap"
    destination = "/tmp/wazo-bootstrap"
  }

  provisioner "file" {
    source      = var.install_script_path != null ? var.install_script_path : "${path.module}/bin/wazo-install"
    destination = "/tmp/wazo-install"
  }

  provisioner "file" {
    source      = "${path.module}/bin/wazo-configure-ha"
    destination = "/tmp/wazo-configure-ha"
  }

  provisioner "file" {
    source      = "${path.module}/bin/wazo-wizard"
    destination = "/tmp/wazo-wizard"
  }

  provisioner "remote-exec" {
    inline = [
      "bash -x /tmp/wazo-bootstrap ${var.ha_mode ? "-h" : ""} -- ${var.install_script_args}",
    ]
  }
}

resource "aws_security_group" "wazo" {
  count       = length(var.security_group_ids) > 0 ? 0 : 1
  name        = local.sg_name
  description = "Wazo stack rules"
  vpc_id      = data.aws_subnet.this.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = concat(
      [data.aws_subnet.this.cidr_block],
      local.allowed_ingress_public,
    )
  }
  ingress {
    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"
    cidr_blocks = concat(
      [data.aws_subnet.this.cidr_block],
      local.allowed_ingress_private,
    )
  }
  dynamic "ingress" {
    for_each = local.sip_ports
    content {
      from_port = ingress.value["port"]
      to_port   = ingress.value["port"]
      protocol  = ingress.value["protocol"]
      cidr_blocks = concat(
        [data.aws_subnet.this.cidr_block],
        local.allowed_ingress_public,
      )
    }
  }
  dynamic "ingress" {
    for_each = local.webrtc_ports
    content {
      from_port = ingress.value["port"]
      to_port   = ingress.value["port"]
      protocol  = ingress.value["protocol"]
      cidr_blocks = concat(
        [data.aws_subnet.this.cidr_block],
        local.allowed_ingress_public,
      )
    }
  }
  dynamic "ingress" {
    for_each = local.stack_ports
    content {
      from_port = ingress.value["port"]
      to_port   = ingress.value["port"]
      protocol  = ingress.value["protocol"]
      cidr_blocks = concat(
        [data.aws_subnet.this.cidr_block],
        local.allowed_ingress_public,
      )
    }
  }
  dynamic "ingress" {
    for_each = local.private_stack_ports
    content {
      from_port = ingress.value["port"]
      to_port   = ingress.value["port"]
      protocol  = ingress.value["protocol"]
      cidr_blocks = concat(
        [data.aws_subnet.this.cidr_block],
        local.allowed_ingress_private,
      )
    }
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = local.sg_name
  }
}
